--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,33 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+
   <servlet>
     <servlet-name>login</servlet-name>
-    <jsp-file>/login.html</jsp-file>
+    <jsp-file>/template/login.html</jsp-file>
   </servlet>
   <servlet-mapping>
     <servlet-name>login</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+  
+
+  <servlet>
+    <servlet-name>admin</servlet-name>
+    <jsp-file>/template/admin.html</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>admin</servlet-name>
+    <url-pattern>/admin</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>manager</servlet-name>
+    <jsp-file>/template/manager.html</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>manager</servlet-name>
+    <url-pattern>/manager</url-pattern>
+  </servlet-mapping>
+
 </web-app>
