--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,15 @@
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>admin_tasks</servlet-name>
+    <jsp-file>/template/admin_tasks.html</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>admin_tasks</servlet-name>
+    <url-pattern>/admin_tasks</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>manager</servlet-name>
     <jsp-file>/template/manager.html</jsp-file>
   </servlet>
